--- a/workflow.yaml
+++ b/workflow.yaml
@@ -298,10 +298,12 @@ jobs:
             is_disabled: ${{ inputs.scheduler.slurm.is_disabled }}
             partition: ${{ inputs.scheduler.slurm.partition }}
             time: ${{ inputs.scheduler.slurm.time }}
-            scheduler_directives: ${{ inputs.scheduler.slurm.scheduler_directives }}
+            scheduler_directives: |
+              ${{ inputs.scheduler.slurm.scheduler_directives }}
           pbs:
             is_disabled: ${{ inputs.scheduler.pbs.is_disabled }}
-            scheduler_directives: ${{ inputs.scheduler.pbs.scheduler_directives }}
+            scheduler_directives: |
+              ${{ inputs.scheduler.pbs.scheduler_directives }}
 
   # ============================================================================
   # Session Management
