--- a/workflow.yaml
+++ b/workflow.yaml
@@ -1,3 +1,33 @@
+# yaml-language-server: $schema=https://activate.parallel.works/workflow.schema.json
+---
+# ==============================================================================
+# ACTIVATE RAG + vLLM Deployment Workflow
+# ==============================================================================
+# Deploys vLLM inference server with optional RAG (Retrieval-Augmented Generation)
+# capabilities on HPC clusters using Apptainer/Singularity containers.
+#
+# Features:
+#   - vLLM inference with tensor parallelism for multi-GPU deployments
+#   - Optional RAG stack with ChromaDB vector store and document indexing
+#   - HuggingFace model cloning via git-lfs or local model path support
+#   - OpenAI-compatible API endpoint for IDE integration (Cline, Continue, etc.)
+#   - Unified SLURM/PBS/SSH job submission via script_submitter marketplace action
+#
+# Organized Input Sections:
+#   1. Resource Selection          - Compute cluster target
+#   2. Scheduler Options           - SLURM/PBS configuration for HPC execution
+#   3. Container Runtime           - Apptainer/Singularity or Docker
+#   4. Model Configuration         - HuggingFace or local model paths
+#   5. vLLM Settings               - GPU count, memory, context length, dtype
+#   6. RAG Settings                - Documents directory, system prompt
+#   7. Container Options           - Container source (path, pull, build)
+#   8. Advanced Settings           - Ports, API keys, repository branch
+#
+# Usage:
+#   Deploy vLLM-only for code assistance or full vLLM+RAG stack for document QA.
+#   Connects to VS Code/IDE via OpenAI-compatible session endpoint.
+# ==============================================================================
+
 permissions:
   - '*'
 sessions:
