Write raw session port to file

--- a/workflow.yaml
+++ b/workflow.yaml
@@ -442,7 +442,8 @@ jobs:
             
             if [ -f SESSION_PORT ]; then
               echo "$(date) Success: SESSION_PORT found!"
-              PORT=$(cat SESSION_PORT)
+              RAW_PORT=$(cat SESSION_PORT)
+              PORT="${RAW_PORT##*=}"
               echo "SESSION_PORT=$PORT" | tee -a "$OUTPUTS"
               exit 0
             elif [ -f job.ended ]; then
